--- a/MetS/css/styles.css
+++ b/MetS/css/styles.css
@@ -119,6 +119,25 @@ hr {
     background-color:#393939;
 }
 
+
+.logo-lang {
+  display:block;
+  padding:1px;
+  /* background-color:#e9eaed; */
+  color:#3B5999;
+  height:25px;
+  width:25px;
+  margin:12px;
+  margin-right:2px;
+  /* margin-left:15px; */
+  font-size:20px;
+  font-weight:700;
+  text-align:center;
+  text-decoration:none;
+  text-shadow:0 0 1px;
+  border-radius:4px;
+}
+
 .logo {
   display:block;
   padding:3px;
@@ -128,7 +147,7 @@ hr {
   width:55px;
   margin:9px;
   margin-right:2px;
-  margin-left:15px;
+  margin-left:9px;
   font-size:20px;
   font-weight:700;
   text-align:center;
@@ -145,7 +164,7 @@ hr {
   width:300px;
   margin:9px;
   margin-right:15px;
-  margin-left:80px;
+  margin-left:110px;
   font-size:12px;
   font-weight:100;
   text-align:left;
@@ -188,6 +207,7 @@ h1,h2,h3 {
 .form-control {
 	
 }
+
 
 .panel textarea, .well textarea, textarea.form-control
 {
