--- a/MetS/css/styles.css
+++ b/MetS/css/styles.css
@@ -5,6 +5,15 @@ html, body {
    color:#555555;
 }
 
+#canvas-holder{
+        width:50%;
+}
+
+.ng-isolate-scope {
+  margin-top: 20px;
+  margin-left: -70px;
+}
+
 .nav {
    font-family:Arial,sans-serif;
    font-size:13px;
