--- a/MetS/css/styles.css
+++ b/MetS/css/styles.css
@@ -5,8 +5,9 @@ html, body {
    color:#555555;
 }
 
-#canvas-holder{
+.canvas-holder{
         width:50%;
+        height: 100%;
 }
 
 .ng-isolate-scope {
