Añadido Gráfico Doughnut

--- a/MetS/css/styles.css
+++ b/MetS/css/styles.css
@@ -6,8 +6,8 @@ html, body {
 }
 
 .canvas-holder{
-        width:50%;
-        height: 100%;
+
+        margin-right: 0px;
 }
 
 .ng-isolate-scope {
