--- a/MetS/css/styles.css
+++ b/MetS/css/styles.css
@@ -10,6 +10,26 @@ html, body {
         margin-right: 0px;
 }
 
+.tc-chart-js-legend {
+  list-style-type: none;
+  padding-left: 0px;
+  margin-top: 20px;
+  border: 1px solid #ff0000;
+}
+.tc-chart-js-legend li {
+  display: block;
+  float: left;
+  clear:both;
+  padding:10px;
+}
+.tc-chart-js-legend li span {
+  width:25px;
+  height:25px;
+  display:block;
+  float:left;
+  margin-right:10px;
+}
+
 .ng-isolate-scope {
   margin-top: 20px;
   margin-left: 0px;
